depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario
  labels:
    app: mario
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
      - name: mario
        image: pengbai/docker-supermario
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mario-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    #external-dns.alpha.kubernetes.io/hostname: dnsalb.kizzuc.tk
spec:
  selector:
    app: mario
  #type: LoadBalancer
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
