ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: instance
    external-dns.alpha.kubernetes.io/hostname: mario.kizzuc.tk, dnsalb2.kizzuc.tk
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "mario-service"
                port:
                  number: 8080
